--- a/megaavr/avrdude.conf
+++ b/megaavr/avrdude.conf
@@ -15797,7 +15797,7 @@ part parent    ".avr8x_tiny"
 # ATmega808
 #------------------------------------------------------------
 
-part parent    ".avr8x_mega"
+part parent    ".avr8x_tiny"
     id        = "m808";
     desc      = "ATmega808";
     signature = 0x1E 0x93 0x26;
@@ -15821,7 +15821,7 @@ part parent    ".avr8x_mega"
 # ATmega809
 #------------------------------------------------------------
 
-part parent    ".avr8x_mega"
+part parent    ".avr8x_tiny"
     id        = "m809";
     desc      = "ATmega809";
     signature = 0x1E 0x93 0x2A;
@@ -15845,7 +15845,7 @@ part parent    ".avr8x_mega"
 # ATmega1608
 #------------------------------------------------------------
 
-part parent    ".avr8x_mega"
+part parent    ".avr8x_tiny"
     id        = "m1608";
     desc      = "ATmega1608";
     signature = 0x1E 0x94 0x27;
@@ -15869,7 +15869,7 @@ part parent    ".avr8x_mega"
 # ATmega1609
 #------------------------------------------------------------
 
-part parent    ".avr8x_mega"
+part parent    ".avr8x_tiny"
     id        = "m1609";
     desc      = "ATmega1609";
     signature = 0x1E 0x94 0x26;
