Fix issue where 'newest' couldn't be installed hardcoded IDE 1.8.12 and 1.8.13 for now. Maybe @per1234 can help out with this later?

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
     - SKETCHBOOK_FOLDER="${HOME}/Arduino"
 
     # Use Arduino IDE version that supports the new AVRs
-    - IDE_VERSION_LIST_FULL='"1.8.12" "newest"'
+    - IDE_VERSION_LIST_FULL='"1.8.12" "1.8.13"'
 
 
   matrix:
