--- a/megaavr/libraries/Servo/library.properties
+++ b/megaavr/libraries/Servo/library.properties
@@ -1,9 +1,9 @@
 name=Servo
-version=1.1.5
-author=MCUdude based on work by Michael Margolis, Arduino
+version=1.2.0
+author=Spence Konde and MCUdude based on work by Michael Margolis, Arduino
 maintainer=MCUdude
 sentence=Allows megaAVR0 chips to control a variety of servo motors.
-paragraph=This library can control a great number of servos.<br />It makes careful use of timers: the library can control 12 servos using only 1 timer.<br />On the Arduino Due you can control up to 60 servos.<br />
+paragraph=This library can control a great number of servos.<br />It makes careful use of timers: the library can control 12 servos using only 1 timer.<br />
 category=Device Control
 url=http://www.arduino.cc/en/Reference/Servo
 architectures=megaavr
