--- a/megaavr/libraries/Logic/library.properties
+++ b/megaavr/libraries/Logic/library.properties
@@ -1,8 +1,8 @@
 name=Logic
-version=1.0.2
-author=MCUdude
-maintainer=MCUdude
-sentence=A library for interfacing with the customizable logic in megaAVR 0-series, tinyAVR 0/1-series, and Dx-series chips
+version=1.1.1
+author=MCUdude and Spence Konde
+maintainer=MCUdude and Spence Konde
+sentence=A library for interfacing with the customizable logic in megaAVR 0-series, tinyAVR 0/1-series, and Dx-series chips. MegaCoreX version of documentation and examples.
 paragraph=
 category=Signal Input/Output
 url=https://github.com/MCUdude/MegaCoreX
