Add another valid MPLAB SNAP USB PID

--- a/megaavr/avrdude.conf
+++ b/megaavr/avrdude.conf
@@ -1252,7 +1252,7 @@ programmer
    desc  = "MPLAB(R) PICkit 4 in UPDI mode";
    type  = "jtagice3_updi";
    connection_type = usb;
-   usbpid = 0x2177, 0x2178, 0x2179;
+   usbpid = 0x2177, 0x2178, 0x2179, 0x9018;
  ;
 
  programmer
