Change architecture to megaavr

--- a/megaavr/libraries/Optiboot_flasher/library.properties
+++ b/megaavr/libraries/Optiboot_flasher/library.properties
@@ -6,6 +6,6 @@ sentence=Read and write contents to the FLASH memory
 paragraph=
 category=Data Storage
 url=
-architectures=avr
+architectures=megaavr
 types=Arduino
 
