--- a/megaavr/libraries/Event/library.properties
+++ b/megaavr/libraries/Event/library.properties
@@ -1,7 +1,7 @@
 name=Event System
-version=1.0.0
+version=1.2.0
 author=MCUdude
-maintainer=MCUdude
+maintainer=MCUdude and Spence Konde
 sentence=A library for interfacing with the built-in event system
 paragraph=
 category=Signal Input/Output
