Move attach/detachInterrupt and ISR to separate cpp file This makes it possible for the dot_a_linkage to optimize away the file when the ISR is not in use, saving about 200 bytes for every sketch that includes Logic.h

--- a/megaavr/libraries/Logic/library.properties
+++ b/megaavr/libraries/Logic/library.properties
@@ -6,4 +6,5 @@ sentence=A library for interfacing with the customizable logic in megaAVR 0-seri
 paragraph=
 category=Signal Input/Output
 url=https://github.com/MCUdude/MegaCoreX
+dot_a_linkage=true
 architectures=megaavr
