Move comparator attach/detachInterrupt and ISR to separate cpp file This makes it possible for the dot_a_linkage to optimize away the file when the ISR is not in use, saving about 200 bytes for every sketch that includes Logic.h

--- a/megaavr/libraries/Comparator/library.properties
+++ b/megaavr/libraries/Comparator/library.properties
@@ -1,9 +1,10 @@
 name=Comparator
-version=1.1.0
+version=1.1.1
 author=MCUdude
 maintainer=MCUdude
 sentence=A library for interfacing with the built-in analog comparator
 paragraph=
 category=Signal Input/Output
 url=https://github.com/MCUdude/MegaCoreX
+dot_a_linkage=true
 architectures=megaavr
